--- a/src/style/index.scss
+++ b/src/style/index.scss
@@ -32,6 +32,9 @@ body {
 	margin: 0;
 	padding: 0;
 }
+body::-webkit-scrollbar {
+	display: none;
+}
 h1,
 h2,
 h3,
