--- a/src/style/mixins/general_arrow_btn.scss
+++ b/src/style/mixins/general_arrow_btn.scss
@@ -5,7 +5,6 @@
 	position: relative;
 	height: 2rem;
 	width: 2rem;
-	z-index: 100;
 	> .arrow-class {
 		&--top,
 		&--bottom {
